# TIP

./: .gitignore  LICENSE-header.md  README.md
hail/: .env.example  .gitignore  Dockerfile  README.md  app.py  app_functions.py  docker-compose.yaml  pyproject.toml
hail/.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
hail/config/: aggregation.py
hail/config/data/: municipalities_to_province.json  municipalities_to_region.json  municipalities_to_res.json
hail/config/developments/: shared.py
hail/config/scenarios/: ii3050_dec_nl2019_cy2012_2040.json  ii3050_dec_nl2019_cy2012_2050.json  ii3050_eur_nl2019_cy2012_2040.json  ii3050_eur_nl2019_cy2012_2050.json  ii3050_ev_nl2019_cy2012_2040.json  (+12 more)
hail/data/: fix_excel.py  parse_links.py  scenario_links.xlsx  scenario_links_nh_orig.xlsx  scenario_links_old.xlsx
hail/hail/: cache.py  client.py  context.py  development.py  generate.py  log_middleware.py  parse.py
hail/pipelines/: build.yml  test.yml
hail/scripts/: docker-entrypoint-with-cache-warming.sh  update_references.py  warm_cache.py
hail/tests/: conftest.py  importable.py  mock_config.py  mock_context.py  test_abc_implementations.py  test_app.py  test_config.py  test_context_util.py  test_gridmap.py  test_group.py  test_import_state.py  test_matrix.py  test_result_config.py  test_ui_insertion.py
pipelines/: .gitignore  README.md  build.yml  check_geometry.py  geo_preprocessing.py  geomapping_regions.py  insert_results.sh  notebook.ipynb  plot_capacity.py  plot_map.py  pyproject.toml  schema.json  shapes_mapper_grid_only.py  shapes_visuals.py
pipelines/data/: geo_hierarchy.csv  geo_mapping.csv  hsms.geojson  hsms.min.geojson  hsms_capacity.json  municipal_load_to_station_map.json  municipalities.geojson  municipalities_simplified.geojson  municipalities_to_province.json  municipalities_to_region.json  municipalities_to_res.json  province.geojson  province_simplified.geojson  regions.geojson  regions_simplified.geojson  res.geojson  res_simplified.geojson
pipelines/visual_checks/: municipal_load_to_station_map.html
(+267 files in other folders)
