[tool.poetry]
# See for more information on the metadata:
#   https://python-poetry.org/docs/pyproject/
# The version entry must be present, however it is further ignored by the build
# process; the version is automatically set by using ``poetry-dynamic-versioning``.
name = "pmiek_geodata"
version = "0.0.0"
description = "Add a short description here!"
authors = ["casper <casper.berkhout@witteveenbos.com>"]
license = "Proprietary - Witteveen+Bos"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 <3.12"
ipykernel = "^6.29.5"
geopandas = "^1.0.1"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
owslib = "^0.31.0"
folium = "^0.18.0"
mapclassify = "^2.8.1"
fiona = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"

[[tool.poetry.source]]
name = "wb_pypi"
url = "https://pypi.wbad.witteveenbos.com/simple/"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = "4.2.3"
package = "pmiek_geodata"
extensions = ["wb_jupyter"]
